@@ -17,7 +17,6 @@
 
 package org.apache.solr.api;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import org.apache.solr.common.SpecProvider;
 import org.apache.solr.common.util.JsonSchemaValidator;
@@ -44,9 +43,7 @@ public abstract class Api implements SpecProvider {
         if (commandSchema == null) {
           ValidatingJsonMap commands = getSpec().getMap("commands", null);
           commandSchema =
-              commands != null
-                  ? ImmutableMap.copyOf(ApiBag.getParsedSchema(commands))
-                  : ImmutableMap.of();
+              commands != null ? Map.copyOf(ApiBag.getParsedSchema(commands)) : Map.of();
         }
       }
     }
